# rust-snyk-minimal

./: .gitignore  Cargo.toml
src/: client.rs  lib.rs
tests/: snyk_test.rs
